# storyteller

./: .dockerignore  .env.example  .gitignore  BLOG_POST.md  BLOG_POST_MEDIUM.md  README.md  docker-compose.yml  generate_video.py  live_audio.py  pyproject.toml  remote-replace-minio.sh  test_gemini_model.py
.github/workflows/: deploy.yml
backend/: Dockerfile.backend  compile_main.py  config.py  main.py
backend/agents/: character_agent.py  compile_agent.py  conversation_agent.py  edit_agent.py  edit_conversation_agent.py  narration_agent.py  scene_image_agent.py  scene_prompt_agent.py  scene_video_agent.py  story_agent.py
backend/audios/: audio.m4a
backend/db/: crud.py  database.py  models.py
backend/pipeline/: orchestrator.py  state.py
backend/src/: audio_to_video.py  merge_subtitle.py  merge_videos.py  split_video.py
backend/utils/: file_io.py  gcs.py  retry.py  (+1 more)
experimentation/: live_audio_instructions.py  starter.ipynb  starter_1.ipynb  starter_2.ipynb
frontend/: .dockerignore  Dockerfile.frontend  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
notebooks/: starter.ipynb
scripts/: 1_story_conversation.py  2_story_from_conversation.py  3-1_generate_narration.py  3-2_generate_narration.py  3_generate_narration.py  4_generate_character_images.py  5_generate_scene_prompts.py  6_generate_scene_images.py  7-1_generate_scene_videos.py  7-2_generate_scene_videos.py  7_generate_scene_videos.py  8_compile_video.py  README.md  story_conversation.py  story_convo_example.txt  story_convo_example_breakdown.json  story_visual_plan.json
(+34 files in other folders)
