[project]
name = "storyteller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "elevenlabs>=2.37.0",
    "fastapi>=0.115.0",
    "google-adk>=1.25.1",
    "google-cloud-storage>=3.4.1",
    "google-cloud-texttospeech>=2.34.0",
    "google-genai>=1.64.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.0",
    "ipykernel>=7.2.0",
    "moviepy>=1.0.3",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "pyaudio>=0.2.14",
    "pydantic>=2.12.5",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.34.0",
    "minio>=7.2.0",
    "firebase-admin>=7.2.0",
]
